--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -8,13 +8,14 @@ edition = "2021"
 [dependencies]
 thiserror = "1"
 bytes = "1"
-tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util"] }
+tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "fs"] }
 tokio-util = { version = "0.7", features = ["compat"] }
 futures-util = { version = "0.3", features = ["io"] }
 tap = "1"
 
 # log
 tracing = "0.1"
+tracing-subscriber = "0.3"
 
 # auth
 totp-rs = "2"
@@ -25,6 +26,7 @@ http = "0.2"
 
 # tls
 tokio-rustls = { version = "0.23", features = ["early-data"] }
+rustls-pemfile = "1"
 
 # config and args
 serde = { version = "1", features = ["derive"] }
