refactor(server): proxy will close all stream when one task is done

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [workspace]
-members = ["server", "bpf", "client", "bridge"]
+members = ["server", "bpf", "client", "share"]
 
 [dependencies]
