--- a/share/Cargo.toml
+++ b/share/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-aya = { version = "0.11", features = ["async_tokio"], optional = true }
+aya = { version = "0.11", optional = true }
 
 [features]
 userspace = ["aya"]
