--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -32,3 +32,5 @@ rustls-pemfile = "1"
 serde = { version = "1", features = ["derive"] }
 serde_yaml = "0.8"
 clap = { version = "3", features = ["derive", "color", "suggestions"] }
+
+share = { path = "../share", features = ["userspace"] }
