--- a/share/Cargo.toml
+++ b/share/Cargo.toml
@@ -7,6 +7,11 @@ edition = "2021"
 
 [dependencies]
 aya = { version = "0.11", optional = true }
+h2 = { version = "0.3", optional = true, features = ["stream"] }
+futures-util = { version = "0.3", optional = true, features = ["io"] }
+bytes = { version = "1", optional = true }
+tokio = { version = "1", optional = true, features = ["macros", "rt"] }
+http = { version = "0.2", optional = true }
 
 [features]
-userspace = ["aya"]
+userspace = ["aya", "h2", "futures-util", "bytes", "tokio", "http"]
