--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -9,9 +9,13 @@ edition = "2021"
 thiserror = "1"
 bytes = "1"
 tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "fs", "sync", "time"] }
+tap = "1"
+
+# async
 tokio-util = { version = "0.7", features = ["compat"] }
 futures-util = { version = "0.3", features = ["io"] }
-tap = "1"
+futures-channel = { version = "0.3", features = ["sink"] }
+async-trait = "0.1"
 
 # log
 tracing = "0.1"
