--- a/share/Cargo.toml
+++ b/share/Cargo.toml
@@ -6,12 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-aya = { version = "0.11", optional = true }
-h2 = { version = "0.3", optional = true, features = ["stream"] }
-futures-util = { version = "0.3", optional = true, features = ["io"] }
-bytes = { version = "1", optional = true }
-tokio = { version = "1", optional = true, features = ["macros", "rt"] }
-http = { version = "0.2", optional = true }
-
-[features]
-userspace = ["aya", "h2", "futures-util", "bytes", "tokio", "http"]
+h2 = { version = "0.3", features = ["stream"] }
+futures-util = { version = "0.3", features = ["io"] }
+bytes = "1"
+tokio = { version = "1", features = ["macros", "rt", "io-util", "net"] }
+tokio-util = { version = "0.7", features = ["compat"] }
+http = "0.2"
+tap = "1"
+tracing = "0.1"
