--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -41,4 +41,7 @@ clap = { version = "3", features = ["derive", "color", "suggestions"] }
 # bpf
 aya = { version = "0.11", features = ["async_tokio"] }
 
+# ip addr
+cidr = "0.2"
+
 share = { path = "../share" }
