--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -21,6 +21,10 @@ async-trait = "0.1"
 tracing = "0.1"
 tracing-subscriber = "0.3"
 
+# bpf log
+aya-log = { git = "https://github.com/aya-rs/aya-log", branch = "main" }
+simplelog = "0.12"
+
 # auth
 totp-rs = "2"
 
@@ -45,3 +49,6 @@ aya = { version = "0.11", features = ["async_tokio"] }
 cidr = "0.2"
 
 share = { path = "../share" }
+
+[dev-dependencies]
+nix = "0.24"
