--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -47,6 +47,7 @@ aya = { version = "0.11", features = ["async_tokio"] }
 
 # ip addr
 cidr = "0.2"
+trust-dns-resolver = "0.22"
 
 share = { path = "../share" }
 
