--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -19,7 +19,7 @@ tracing = "0.1"
 tracing-subscriber = "0.3"
 
 # auth
-totp-rs = "2"
+totp-rs = { version = "3", features = ["otpauth"] }
 
 # http/2
 h2 = { version = "0.3", features = ["stream"] }
