--- a/bpf/Cargo.toml
+++ b/bpf/Cargo.toml
@@ -8,7 +8,7 @@ license = "MIT"
 
 [dependencies]
 aya-bpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
-aya-log-ebpf = { git = "https://github.com/aya-rs/aya-log", branch = "main" }
+aya-log-ebpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
 
 [build-dependencies]
 bindgen = "0.60"
