--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -22,8 +22,11 @@ async-trait = "0.1"
 tracing = "0.1"
 tracing-subscriber = "0.3"
 
+# bpf
+aya = { git = "https://github.com/aya-rs/aya", tag = "aya-log-v0.1.11", features = ["async_tokio"] }
+
 # bpf log
-aya-log = { git = "https://github.com/aya-rs/aya-log", branch = "main" }
+aya-log = { git = "https://github.com/aya-rs/aya", tag = "aya-log-v0.1.11" }
 tracing-log = "0.1"
 
 # auth
@@ -42,9 +45,6 @@ webpki-roots = "0.22"
 serde = { version = "1", features = ["derive"] }
 serde_yaml = "0.9"
 clap = { version = "3", features = ["derive", "color", "suggestions"] }
-
-# bpf
-aya = { version = "0.11", features = ["async_tokio"] }
 
 # ip addr
 cidr = "0.2"
