feat: add lycoris-client h2 ping pong

--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -14,6 +14,7 @@ tap = "1"
 
 # async
 tokio-util = { version = "0.7", features = ["compat"] }
+tokio-stream = { version = "0.1", features = ["time"] }
 futures-util = { version = "0.3", features = ["io"] }
 futures-channel = { version = "0.3", features = ["sink"] }
 async-trait = "0.1"
