--- a/share/Cargo.toml
+++ b/share/Cargo.toml
@@ -10,6 +10,7 @@ h2 = { version = "0.3", features = ["stream"] }
 futures-util = { version = "0.3", features = ["io"] }
 bytes = "1"
 tokio = { version = "1", features = ["macros", "rt", "io-util", "net"] }
+tokio-stream = { version = "0.1", features = ["time", "io-util"] }
 http = "0.2"
 tap = "1"
 tracing = "0.1"
