--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -13,10 +13,14 @@ tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-uti
 tap = "1"
 
 # async
-tokio-stream = { version = "0.1", features = ["time", "io-util"] }
+tokio-stream = { version = "0.1", features = ["time", "io-util", "net"] }
 futures-util = { version = "0.3", features = ["io"] }
 futures-channel = { version = "0.3", features = ["sink"] }
 async-trait = "0.1"
+
+# http proxy
+hyper = { version = "0.14", features = ["server", "runtime", "http1", "http2"] }
+http-body = "0.4"
 
 # log
 tracing = "0.1"
