--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -14,12 +14,12 @@ tap = "1"
 
 # async
 tokio-stream = { version = "0.1", features = ["time", "io-util", "net"] }
+tokio-util = { version = "0.7", features = ["io"] }
 futures-util = { version = "0.3", features = ["io"] }
 futures-channel = { version = "0.3", features = ["sink"] }
 async-trait = "0.1"
 
 # http proxy
-hyper = { version = "0.14", features = ["server", "runtime", "http1", "http2"] }
 http-body = "0.4"
 
 # log
@@ -39,6 +39,8 @@ totp-rs = { version = "5", features = ["otpauth"] }
 # http/2
 h2 = { version = "0.3", features = ["stream"] }
 http = "0.2"
+hyper = { version = "0.14", features = ["server", "runtime", "http1", "http2", "stream"] }
+hyper-rustls = { version = "0.24", features = ["http2", "logging"] }
 
 # tls
 tokio-rustls = "0.24"
