--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -10,6 +10,7 @@ license = "MIT"
 thiserror = "1"
 bytes = "1"
 tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "fs"] }
+tokio-util = { version = "0.7", features = ["io"] }
 futures-util = { version = "0.3", features = ["io"] }
 tap = "1"
 
@@ -23,6 +24,7 @@ totp-rs = { version = "5", features = ["otpauth"] }
 # http/2
 h2 = { version = "0.3", features = ["stream"] }
 http = "0.2"
+hyper = { version = "0.14", features = ["runtime", "http2", "http1", "server", "stream"] }
 
 # tls
 tokio-rustls = "0.24"
