--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -10,6 +10,7 @@ license = "MIT"
 thiserror = "1"
 bytes = "1"
 tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "fs"] }
+tokio-util = { version = "0.7", features = ["io"] }
 futures-util = { version = "0.3", features = ["io"] }
 tap = "1"
 
@@ -21,8 +22,8 @@ tracing-subscriber = "0.3"
 totp-rs = { version = "5", features = ["otpauth"] }
 
 # http/2
-h2 = { version = "0.3", features = ["stream"] }
 http = "0.2"
+hyper = { version = "0.14", features = ["runtime", "http2", "http1", "server", "stream"] }
 
 # tls
 tokio-rustls = "0.24"
@@ -34,3 +35,8 @@ serde_yaml = "0.9"
 clap = { version = "3", features = ["derive", "color", "suggestions"] }
 
 share = { path = "../share" }
+
+[dev-dependencies]
+webpki = { version = "0.22", features = ["std"] }
+hyper-rustls = { version = "0.24", features = ["http2", "logging"] }
+hyper = { version = "0.14", features = ["client"] }
