--- a/share/Cargo.toml
+++ b/share/Cargo.toml
@@ -6,11 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-h2 = { version = "0.3", features = ["stream"] }
-futures-util = { version = "0.3", features = ["io"] }
+futures-util = { version = "0.3", features = ["io", "sink"] }
 bytes = "1"
 tokio = { version = "1", features = ["macros", "rt", "io-util", "net"] }
 tokio-stream = { version = "0.1", features = ["time", "io-util"] }
 http = "0.2"
+hyper = { version = "0.14", features = ["stream"] }
 tap = "1"
 tracing = "0.1"
