--- a/bpf/Cargo.toml
+++ b/bpf/Cargo.toml
@@ -7,8 +7,8 @@ license = "MIT"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-aya-bpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
-aya-log-ebpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
+aya-bpf = { git = "https://github.com/aya-rs/aya", rev = "58f1ecb" }
+aya-log-ebpf = { git = "https://github.com/aya-rs/aya", rev = "58f1ecb" }
 
 [build-dependencies]
-bindgen = "0.60"
+bindgen = "0.65"
