--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -7,7 +7,7 @@ license = "MIT"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-thiserror = "1"
+anyhow = "1"
 bytes = "1"
 tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "fs", "sync", "time"] }
 tap = "1"
@@ -17,10 +17,7 @@ tokio-stream = { version = "0.1", features = ["time", "io-util", "net"] }
 tokio-util = { version = "0.7", features = ["io"] }
 futures-util = { version = "0.3", features = ["io"] }
 futures-channel = { version = "0.3", features = ["sink"] }
-async-trait = "0.1"
-
-# http proxy
-http-body = "0.4"
+trait-variant = "0.1"
 
 # log
 tracing = "0.1"
@@ -29,7 +26,7 @@ tracing-subscriber = "0.3"
 # bpf
 aya = { git = "https://github.com/aya-rs/aya", rev = "5c86b7e", features = ["async_tokio"] }
 aya-log = { git = "https://github.com/aya-rs/aya", rev = "5c86b7e" }
-tracing-log = "0.1"
+tracing-log = "0.2"
 
 # auth
 totp-rs = { version = "5", features = ["otpauth"] }
@@ -48,11 +45,11 @@ webpki = { version = "0.22", features = ["std"] }
 # config and args
 serde = { version = "1", features = ["derive"] }
 serde_yaml = "0.9"
-clap = { version = "3", features = ["derive", "color", "suggestions"] }
+clap = { version = "4", features = ["derive", "color", "suggestions"] }
 
 # ip addr
 cidr = "0.2"
-trust-dns-resolver = "0.22"
+trust-dns-resolver = "0.23"
 
 share = { path = "../share" }
 
