--- a/client/example.yaml
+++ b/client/example.yaml
@@ -1,5 +1,7 @@
 listen_addr: 127.0.0.1:1980
-listen_addr_v6: [ ::1 ]:1980
+listen_addr_v6: '[::1]:1980'
+container_bridge_listen_addr: null
+container_bridge_listen_addr_v6: null
 remote_domain: example.com
 remote_port: 443
 ca_cert: example/ca.cert
