--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lycoris-client"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 license = "MIT"
 rust-version = "1.75"
@@ -22,7 +22,6 @@ trait-variant = "0.1"
 
 # log
 tracing = "0.1"
-tracing-subscriber = "0.3"
 
 # bpf
 aya = { git = "https://github.com/aya-rs/aya", rev = "5c86b7e", features = ["async_tokio"] }
@@ -33,9 +32,11 @@ tracing-log = "0.2"
 totp-rs = { version = "5", features = ["otpauth"] }
 
 # http/2
-http = "0.2"
-hyper = { version = "0.14", features = ["server", "runtime", "http1", "http2", "stream"] }
-hyper-rustls = { version = "0.25", features = ["http2", "logging"] }
+http = "1"
+hyper = { version = "1", features = ["http2", "client"] }
+hyper-rustls = { version = "0.26", features = ["http2", "logging"] }
+hyper-util = { version = "0.1", features = ["client-legacy", "http2", "tokio"] }
+http-body-util = "0.1"
 
 # tls
 tokio-rustls = "0.25"
