--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -41,7 +41,7 @@ http-body-util = "0.1"
 # tls
 tokio-rustls = "0.25"
 rustls-pemfile = "2"
-webpki-roots = "0.26"
+rustls-native-certs = "0.7"
 
 # config and args
 serde = { version = "1", features = ["derive"] }
