feat: add accept

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ resolver = "2"
 [workspace.dependencies]
 anyhow = "1"
 bytes = "1"
+event-listener = "5"
 futures-util = "0.3"
 futures-channel = "0.3"
 futures-rustls = "0.26"
@@ -12,8 +13,10 @@ http = "1"
 http-body-util = "0.1"
 hyper = "1"
 hyper-util = "0.1"
+pin-project = "1"
 tokio-util = "0.7"
 totp-rs = "5"
+thiserror = "1"
 tower-service = "0.3"
 tracing = "0.1"
 trait-make = "0.1"
