--- a/share/Cargo.toml
+++ b/share/Cargo.toml
@@ -6,6 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+hickory-resolver = { workspace = true, features = ["default", "system-config"] }
+hyper-util = { workspace = true, features = ["client-legacy", "http2", "tokio"] }
+tokio-util = { workspace = true, features = ["compat"] }
+
+protocol = { path = "../protocol" }
+
 futures-util = { version = "0.3", features = ["io", "sink"] }
 futures-channel = { version = "0.3", features = ["sink"] }
 bytes = "1"
