--- a/share/Cargo.toml
+++ b/share/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies]
+[target.'cfg(not(target_arch = "bpf"))'.dependencies]
 bytes = { workspace = true }
 futures-channel = { workspace = true, features = ["sink"] }
 futures-util = { workspace = true, features = ["io", "sink"] }
