--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -1,7 +1,9 @@
+cargo-features = ["edition2024"]
+
 [package]
 name = "lycoris-client"
 version = "0.4.0"
-edition = "2021"
+edition = "2024"
 license = "MIT"
 rust-version = "1.80"
 
