refactor: replace futures_channel with flume

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,9 @@ resolver = "2"
 [workspace.dependencies]
 anyhow = "1"
 bytes = "1"
-cidr = "0.2"
+cidr = "0.3.1"
 clap = { version = "4", features = ["derive", "color", "suggestions"] }
-futures-channel = "0.3"
+flume = "0.11.1"
 futures-rustls = "0.26"
 futures-util = "0.3"
 hickory-resolver = { version = "0.24", default-features = false }
@@ -16,7 +16,7 @@ http-body-util = "0.1"
 hyper = "1"
 hyper-util = "0.1"
 libc = "0.2"
-rustls-native-certs = "0.7"
+rustls-native-certs = "0.8.1"
 rustls-pemfile = "2"
 serde = "1"
 serde_yaml = "0.9"
